apps/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 8096
      targetPort: 8096
